# curious

./: .gitignore  .readthedocs.yml  LICENCE  README.md  README.rst  environment.yml  pyproject.toml  setup.py
curious/: __init__.py  client.py  curio_http.py  event.py  exc.py  gateway.py  http.py  oauth.py  state.py  util.py
curious/commands/: __init__.py  bot.py  cmd.py  command.py  conditions.py  context.py  converters.py  decorators.py  exc.py  help.py  manager.py  plugin.py  plugin_core.py  ratelimit.py  utils.py
curious/core/: __init__.py  chunker.py  client.py  event.py  gateway.py  httpclient.py  state.py
curious/core/_ws_wrapper/: __init__.py  curio_wrapper.py  trio_wrapper.py
curious/dataclasses/: __init__.py  appinfo.py  attachment.py  bases.py  channel.py  channel_type.py  embed.py  emoji.py  guild.py  invite.py  member.py  message.py  permissions.py  permissions.pyi  presence.py  reaction.py  role.py  search.py  status.py  user.py  voice_state.py  webhook.py  widget.py
curious/ext/loapi/: __init__.py
curious/ext/paginator/: __init__.py
curious/http/: __init__.py  curio_http.py  httpclient.py
curious/ipc/: __init__.py  client.py  packet.py
curious/voice/: __init__.py  voice_client.py  voice_gateway.py  voice_player.py
curious/voice_old/: __init__.py  voice_client.py  voice_player.py
docs/: LICENCE  Makefile  make.bat  rtd-requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  events.rst  hiapi.rst  index.rst  loapi.rst  speedups.rst
docs/source/autogen/: curious.rst
docs/source/tutorial/: better_event_handling.rst  commands.rst  firstbot.rst  gettingstarted.rst
docs/source/tutorial/objects/: channel.rst
examples/: commands.py  events.py
