[tool]
[tool.poetry]
name = "discord-curious"
version = "1.0.0"
description = "An async library for the Discord API"
license = "LGPLv3"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8.0"
multidict = ">=4.1.0"
pylru = ">=1.0.9"
pytz = ">=2017.3"
typing-inspect = ">=0.2.0"
trio = "^0.18.0"
trio-websocket = "^0.9.2"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[tool.black]
line-length = 100
target_version = ['py37']
