[tool]
[tool.poetry]
name = "discord-curious"
version = "0.8.0"
description = "An async library for the Discord API"
license = "LGPLv3"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.11.0"
multidict = "^6.0.4"
pylru = "^1.2.1"
pytz = ">=2017.3"
typing-inspect = "^0.9.0"
trio-websocket = "^0.10.2"
httpx = "^0.24.1"
trio = "^0.22.0"

[tool.black]
line-length = 100
target_version = ['py37']
